add query newyear activity
