# docs/swagger.json
@@ -362,13 +362,6 @@
                 "operationId": "GetDiscordChannelDetail",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer JWT",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "type": "integer",
                         "description": "guild_id",
                         "name": "guild_id",
@@ -686,13 +679,6 @@
                 "operationId": "GetDoDoChannelDetail",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer JWT",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "type": "integer",
                         "description": "island_id",
                         "name": "island_id",
@@ -906,13 +892,6 @@
                 "operationId": "GetPOAPResultList",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer JWT",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "type": "integer",
                         "description": "page",
                         "name": "page",
@@ -972,13 +951,6 @@
                 "operationId": "GetPOAPResult",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer JWT",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "type": "integer",
                         "description": "activity_id",
                         "name": "activity_id",
@@ -1032,13 +1004,6 @@
                 "summary": "Get POAP Activity detail",
                 "operationId": "GetPOAPActivityDetail",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer JWT",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "description": "id",
@@ -1143,13 +1108,6 @@
                 "operationId": "GetMintCount",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer JWT",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "type": "integer",
                         "description": "activity_id",
                         "name": "activity_id",
@@ -1204,13 +1162,6 @@
                 "operationId": "POAPMintByCSV",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer JWT",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "poap_csv_mint_dto",
                         "name": "poap_csv_mint_dto",
                         "in": "body",
@@ -1260,13 +1211,6 @@
                 "operationId": "POAPMintByH5",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer JWT",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "poap_h5_mint_dto",
                         "name": "poap_h5_mint_dto",
                         "in": "body",
@@ -1315,13 +1259,6 @@
                 "summary": "Update By Sharing",
                 "operationId": "Update By Sharing",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer JWT",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "share_request",
                         "name": "share_request",
