# routers/common.go
@@ -12,7 +12,6 @@ import (
 // @Description Get Discord Channel detail info
 // @security    ApiKeyAuth
 // @Produce     json
-// @Param       Authorization header   string true "Bearer JWT"
 // @Param       guild_id      path     int    true "guild_id"
 // @Success     200           {array} discordgo.Channel
 // @Failure     500           {object} appService_errors.RainbowAppServiceErrorDetailInfo "Internal Server error"
@@ -30,7 +29,6 @@ func getDiscordChannelInfo(c *gin.Context) {
 // @Description Get DoDo Channel detail info
 // @security    ApiKeyAuth
 // @Produce     json
-// @Param       Authorization header   string true "Bearer JWT"
 // @Param       island_id     path     int    true "island_id"
 // @Success     200           {array} model.ChannelElement
 // @Failure     500           {object} appService_errors.RainbowAppServiceErrorDetailInfo "Internal Server error"
